syntax = "proto3";

option csharp_namespace = "TrainsGrpc";

package train;

// The greeting service definition.
service Train {
  // Sends a greeting
  rpc AddTrain (AddTrainRequest) returns (GetTrainReply);
}

// The request message containing the user's name.
message AddTrainRequest {
    int32 YearMade = 2;
    string Name = 3;
    int32 Color = 4;
    string LicensePlate = 5;
    string Company = 6;
    string HomeStation = 7;
    bool IsRenovated = 8;
}

// The response message containing the greetings.
message GetTrainReply {
    string Id = 1;
    int32 YearMade = 2;
    string Name = 3;
    int32 Color = 4;
    string LicensePlate = 5;
    string Company = 6;
    string HomeStation = 7;
    bool IsRenovated = 8;
}
